--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -12,7 +12,19 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <mave.compiler.target>1.8</mave.compiler.target>
     </properties>
-
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.5.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
