--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <mave.compiler.target>1.8</mave.compiler.target>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 	<build>
     <plugins>
