--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Ignore server/target directory
 Server/target/**
+Server/.idea/**
+Server/.idea/compiler.xml
+
+.idea/**
+
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
@@ -27,4 +32,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# SERVER IGNORE
