--- a/deploy.yaml
+++ b/deploy.yaml
@@ -2,31 +2,36 @@
 apiVersion: v1
 kind: Pod
 metadata:
-    name: team39-pod
-    labels:
-        app: team39-pod
+        name: team39-pod
+        labels:
+                app: team39-pod
 spec:
-    containers:
-      - name: rest-server
-        image: sarawill86/cs370-project:latest
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8080
-            
+        containers:
+                - name: rest-server
+                  image: sarawill86/cs370-project:latest
+                  imagePullPolicy: Always
+                  ports:
+                          - containerPort: 8080
+                - name: front-end
+                  image: sarawill86/frontend:latest
+                  command: ["npm", "start"]
+                  ports:
+                          -containerPort: 3000
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: rest-service
-    labels:
-        app: rest-service
+        name: website
+        labels:
+                app: website
 spec:
-    type: NodePort
-    selector:
-        app: team39-pod
-    ports:
-      - name: http
-        protocol: TCP
-        targetPort: 8080
-        port: 80
-        nodePort: 30001
+        type: NodePort
+        selector:
+                app: team39-pod
+        ports:
+                - name: http
+                  protocol: TCP
+                  targetPort: 3000
+                  port: 80
+                  nodePort: 30001
